--- a/src/ExpressionTests/ExpressionTests.csproj
+++ b/src/ExpressionTests/ExpressionTests.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="ExpressionCreationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SumTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
