--- a/src/ExpressionTests/ExpressionTests.csproj
+++ b/src/ExpressionTests/ExpressionTests.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExpressionCreationTests.cs" />
+    <Compile Include="InvalidExpressionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OperatorTests\SumTests.cs" />
     <Compile Include="SimpleExpressionTests.cs" />
