--- a/src/ExpressionTests/ExpressionTests.csproj
+++ b/src/ExpressionTests/ExpressionTests.csproj
@@ -61,7 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExpressionCreationTests.cs" />
+    <Compile Include="ExpressionRepresentationTests.cs" />
     <Compile Include="InvalidExpressionTests.cs" />
+    <Compile Include="OperatorTests\SubtractionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OperatorTests\SumTests.cs" />
     <Compile Include="SimpleExpressionTests.cs" />
