Added simple console program that evaluates RPN expressions

--- a/src/ExpressionTests/ExpressionTests.csproj
+++ b/src/ExpressionTests/ExpressionTests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OperatorTests\SumTests.cs" />
     <Compile Include="SimpleExpressionTests.cs" />
+    <Compile Include="TokenFactoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
